# anima-sandbox

./: .gitignore  Cargo.toml  LICENSE.md  run.local.sh  serve.sh
desktop/: Cargo.toml
desktop/src/: main.rs
engine/: Cargo.toml
engine/scenes/rainbow_cube/: scene.json
engine/scenes/white_tile/: scene.json  shader.wgsl
engine/src/: lib.rs  shader.wgsl
web/: Cargo.toml  Trunk.toml  index.html
web/src/: lib.rs
