[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
engine = { path = "../engine" }
winit = "0.30"
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = { version = "1", features = ["color"] }
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
wgpu = "25"
